--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -117,6 +117,11 @@
         "command": "logicAppsExtension.openOverview",
         "title": "Overview",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.switchToDotnetProject",
+        "title": "Convert to NuGet-based Logic App project",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -287,6 +292,11 @@
           "command": "logicAppsExtension.openDesigner",
           "when": "resourceFilename==workflow.json",
           "group": "navigation@3"
+        },
+        {
+          "command": "logicAppsExtension.switchToDotnetProject",
+          "when": "explorerResourceIsRoot == true",
+          "group": "zzz_LogicApptools@3"
         }
       ],
       "commandPalette": [
@@ -404,6 +414,7 @@
     "onCommand:logicAppsExtension.deleteLogicApp",
     "onCommand:logicAppsExtension.openOverview",
     "onCommand:logicAppsExtension.refresh",
+    "onCommand:logicAppsExtension.switchToDotnetProject",
     "onView:newAzLogicApps",
     "onDebugInitialConfigurations"
   ],
