Add package.json context and activation events

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -432,6 +432,8 @@
     "onCommand:logicAppsExtension.refresh",
     "onCommand:logicAppsExtension.switchToDotnetProject",
     "onView:newAzLogicApps",
+    "workspaceContains:host.json",
+    "workspaceContains:*/host.json",
     "onDebugInitialConfigurations"
   ],
   "galleryBanner": {
