Add command to package.json

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -122,6 +122,11 @@
         "command": "logicAppsExtension.switchToDotnetProject",
         "title": "Convert to NuGet-based Logic App project",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.openInPortal",
+        "title": "Open in Portal",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -275,6 +280,21 @@
           "command": "logicAppsExtension.openOverview",
           "when": "view == newAzLogicApps && viewItem =~ /Remote;.*;Workflow;/i",
           "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.openInPortal",
+          "when": "view == newAzLogicApps && viewItem == azureextensionui.azureSubscription",
+          "group": "2@1"
+        },
+        {
+          "command": "logicAppsExtension.openInPortal",
+          "when": "view == newAzLogicApps && viewItem == azLogicAppsProductionSlot",
+          "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.openInPortal",
+          "when": "view == newAzLogicApps && viewItem =~ /^deployment//",
+          "group": "1@3"
         }
       ],
       "explorer/context": [
@@ -430,6 +450,7 @@
     "onCommand:logicAppsExtension.openOverview",
     "onCommand:logicAppsExtension.refresh",
     "onCommand:logicAppsExtension.switchToDotnetProject",
+    "onCommand:logicAppsExtension.openInPortal",
     "onView:newAzLogicApps",
     "onDebugInitialConfigurations"
   ],
