Add command to package.json

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -123,6 +123,11 @@
         "command": "logicAppsExtension.switchToDotnetProject",
         "title": "Convert to NuGet-based Logic App project",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.redeploy",
+        "title": "Redeploy",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -276,6 +281,11 @@
           "command": "logicAppsExtension.openOverview",
           "when": "view == newAzLogicApps && viewItem =~ /Remote;.*;Workflow;/i",
           "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.redeploy",
+          "when": "view == newAzLogicApps && viewItem =~ /^deployment//",
+          "group": "1@2"
         }
       ],
       "explorer/context": [
@@ -431,6 +441,7 @@
     "onCommand:logicAppsExtension.openOverview",
     "onCommand:logicAppsExtension.refresh",
     "onCommand:logicAppsExtension.switchToDotnetProject",
+    "onCommand:logicAppsExtension.redeploy",
     "onView:newAzLogicApps",
     "workspaceContains:host.json",
     "workspaceContains:*/host.json",
