Update launch action to debug telemetry instead of log it into production and update ai key from package.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,10 @@
       "trace": false,
       "internalConsoleOptions": "openOnFirstSessionStart",
       "outFiles": ["${workspaceFolder}/dist/apps/vs-code-designer"],
-      "preLaunchTask": "npm: build:vscode-designer"
+      "preLaunchTask": "npm: build:vscode-designer",
+      "env": {
+        "DEBUGTELEMETRY": "v"
+      }
     },
     {
       "name": "Run Data Mapper Extension In Dev Mode",
