--- a/apps/vs-code-designer/project.json
+++ b/apps/vs-code-designer/project.json
@@ -14,6 +14,7 @@
         "assets": [
           "apps/vs-code-designer/src/assets",
           "apps/vs-code-designer/src/package.json",
+          "apps/vs-code-designer/src/LICENSE.md",
           {
             "glob": "**/*.svg",
             "input": "node_modules/@microsoft/vscode-azext-azureutils/resources",
