update to new designer loc

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -165,7 +165,7 @@
         },
         {
           "command": "azureLogicAppsStandard.exportLogicApp",
-          "when": "view == azLogicApps",
+          "when": "view == newAzLogicApps",
           "group": "navigation@4"
         },
         {
