--- a/apps/vs-code-data-mapper/src/package.json
+++ b/apps/vs-code-data-mapper/src/package.json
@@ -15,7 +15,7 @@
         "azureDataMapper.useExpandedFunctionCards": {
           "type": "boolean",
           "default": true,
-          "description": "Use the larger function cards that contain more information on them."
+          "description": "Default the mapper to use the expanded function cards."
         }
       }
     },
