VSFeat: Add create and delete slot command (#1539)
* Add command to package.json

* Add delete slot command and logic for both commands

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -152,6 +152,16 @@
         "command": "logicAppsExtension.viewProperties",
         "title": "View Properties",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.createSlot",
+        "title": "Create Slot...",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.deleteSlot",
+        "title": "Delete Slot...",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -340,6 +350,16 @@
           "command": "logicAppsExtension.viewProperties",
           "when": "view == newAzLogicApps && viewItem =~ /^azLogicApps(Production|)Slot$/",
           "group": "6@1"
+        },
+        {
+          "command": "logicAppsExtension.createSlot",
+          "when": "view == newAzLogicApps && viewItem == azLogicAppsSlots",
+          "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.deleteSlot",
+          "when": "view == newAzLogicApps && viewItem == azLogicAppsSlot",
+          "group": "2@5"
         }
       ],
       "explorer/context": [
@@ -500,6 +520,8 @@
     "onCommand:logicAppsExtension.redeploy",
     "onCommand:logicAppsExtension.browseWebsite",
     "onCommand:logicAppsExtension.viewProperties",
+    "onCommand:logicAppsExtension.createSlot",
+    "onCommand:logicAppsExtension.deleteSlot",
     "onView:newAzLogicApps",
     "workspaceContains:host.json",
     "workspaceContains:*/host.json",
