--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -162,6 +162,16 @@
         "command": "logicAppsExtension.deleteSlot",
         "title": "Delete Slot...",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.startStreamingLogs",
+        "title": "Start Streaming Logs",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.stopStreamingLogs",
+        "title": "Stop Streaming Logs",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -360,6 +370,26 @@
           "command": "logicAppsExtension.deleteSlot",
           "when": "view == newAzLogicApps && viewItem == azLogicAppsSlot",
           "group": "2@5"
+        },
+        {
+          "command": "logicAppsExtension.startStreamingLogs",
+          "when": "view == newAzLogicApps && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "group": "4@1"
+        },
+        {
+          "command": "logicAppsExtension.startStreamingLogs",
+          "when": "view == newAzLogicApps && viewItem =~ /Remote;.*;Workflow;/i",
+          "group": "3@1"
+        },
+        {
+          "command": "logicAppsExtension.stopStreamingLogs",
+          "when": "view == newAzLogicApps && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "group": "4@2"
+        },
+        {
+          "command": "logicAppsExtension.stopStreamingLogs",
+          "when": "view == newAzLogicApps && viewItem =~ /Remote;.*;Workflow;/i",
+          "group": "3@2"
         }
       ],
       "explorer/context": [
@@ -522,6 +552,8 @@
     "onCommand:logicAppsExtension.viewProperties",
     "onCommand:logicAppsExtension.createSlot",
     "onCommand:logicAppsExtension.deleteSlot",
+    "onCommand:logicAppsExtension.startStreamingLogs",
+    "onCommand:logicAppsExtension.stopStreamingLogs",
     "onView:newAzLogicApps",
     "workspaceContains:host.json",
     "workspaceContains:*/host.json",
