VSFeat: Add start and stop streaming logs command (#1541)
* Add commands to package.json

* Register start and add stop command

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -167,6 +167,16 @@
         "command": "logicAppsExtension.viewDeploymentLogs",
         "title": "View Deployment Logs",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.startStreamingLogs",
+        "title": "Start Streaming Logs",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.stopStreamingLogs",
+        "title": "Stop Streaming Logs",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -370,6 +380,16 @@
           "command": "logicAppsExtension.viewDeploymentLogs",
           "when": "view == newAzLogicApps && viewItem =~ /^deployment//",
           "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.startStreamingLogs",
+          "when": "view == newAzLogicApps && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "group": "4@1"
+        },
+        {
+          "command": "logicAppsExtension.stopStreamingLogs",
+          "when": "view == newAzLogicApps && viewItem =~ /^azLogicApps(Production|)Slot$/",
+          "group": "4@2"
         }
       ],
       "explorer/context": [
@@ -532,6 +552,8 @@
     "onCommand:logicAppsExtension.viewProperties",
     "onCommand:logicAppsExtension.createSlot",
     "onCommand:logicAppsExtension.deleteSlot",
+    "onCommand:logicAppsExtension.startStreamingLogs",
+    "onCommand:logicAppsExtension.stopStreamingLogs",
     "onCommand:logicAppsExtension.viewDeploymentLogs",
     "onView:newAzLogicApps",
     "workspaceContains:host.json",
