[Data Mapper] Expanded function cards (#1533)
* Functioning POC

* More improvements
* unlimited inputs
* coloring for custom values

* Functioning Standalone

* Fixes for VSIX

* Cleanup

* More cleanup

* Add comment

* memo-ize custom nodes and edges

--- a/apps/vs-code-data-mapper/src/package.json
+++ b/apps/vs-code-data-mapper/src/package.json
@@ -9,6 +9,16 @@
     "vscode": "^1.64.0"
   },
   "contributes": {
+    "configuration": {
+      "title": "Azure Data Mapper",
+      "properties": {
+        "azureDataMapper.useExpandedFunctionCards": {
+          "type": "boolean",
+          "default": true,
+          "description": "Default the mapper to use the expanded function cards."
+        }
+      }
+    },
     "commands": [
       {
         "command": "azureDataMapper.createNewDataMap",
