--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -196,6 +196,41 @@
           "light": "assets/light/visible.svg",
           "dark": "assets/dark/visible.svg"
         }
+      },
+      {
+        "command": "logicAppsExtension.appSettings.add",
+        "title": "Add New Setting...",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.appSettings.delete",
+        "title": "Delete Setting...",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.appSettings.download",
+        "title": "Download Remote Settings...",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.appSettings.edit",
+        "title": "Edit Setting...",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.appSettings.rename",
+        "title": "Rename Setting...",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.appSettings.toggleSlotSetting",
+        "title": "Toggle as Slot Setting",
+        "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.appSettings.upload",
+        "title": "Upload Local Settings...",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -419,6 +454,41 @@
           "command": "logicAppsExtension.toggleAppSettingVisibility",
           "when": "view == newAzLogicApps && viewItem == applicationSettingItem",
           "group": "inline"
+        },
+        {
+          "command": "logicAppsExtension.appSettings.add",
+          "when": "view == newAzLogicApps && viewItem == applicationSettings",
+          "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.appSettings.delete",
+          "when": "view == newAzLogicApps && viewItem == applicationSettingItem",
+          "group": "1@3"
+        },
+        {
+          "command": "logicAppsExtension.appSettings.download",
+          "when": "view == newAzLogicApps && viewItem == applicationSettings",
+          "group": "1@2"
+        },
+        {
+          "command": "logicAppsExtension.appSettings.edit",
+          "when": "view == newAzLogicApps && viewItem == applicationSettingItem",
+          "group": "1@1"
+        },
+        {
+          "command": "logicAppsExtension.appSettings.rename",
+          "when": "view == newAzLogicApps && viewItem == applicationSettingItem",
+          "group": "1@2"
+        },
+        {
+          "command": "logicAppsExtension.appSettings.toggleSlotSetting",
+          "when": "view == newAzLogicApps && viewItem == applicationSettingItem",
+          "group": "1@4"
+        },
+        {
+          "command": "logicAppsExtension.appSettings.upload",
+          "when": "view == newAzLogicApps && viewItem == applicationSettings",
+          "group": "1@3"
         }
       ],
       "explorer/context": [
@@ -595,6 +665,13 @@
     "onCommand:logicAppsExtension.stopStreamingLogs",
     "onCommand:logicAppsExtension.viewDeploymentLogs",
     "onCommand:logicAppsExtension.swapSlot",
+    "onCommand:logicAppsExtension.appSettings.add",
+    "onCommand:logicAppsExtension.appSettings.delete",
+    "onCommand:logicAppsExtension.appSettings.download",
+    "onCommand:logicAppsExtension.appSettings.edit",
+    "onCommand:logicAppsExtension.appSettings.rename",
+    "onCommand:logicAppsExtension.appSettings.toggleSlotSetting",
+    "onCommand:logicAppsExtension.appSettings.upload",
     "onView:newAzLogicApps",
     "workspaceContains:host.json",
     "workspaceContains:*/host.json",
